<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top"
    android:orientation="vertical"
    app:ignore="NamespaceTypo">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:cardElevation="4dp"
        app:ignore="NamespaceTypo"
        card_view:cardCornerRadius="15dp"
        card_view:contentPaddingLeft="8dp"
        card_view:contentPaddingRight="8dp"
        card_view:contentPaddingTop="18dp"
        card_view:contentPaddingBottom="18dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">


            <TextView
                android:id="@+id/msg_Content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:textAlignment="center"
                android:fontFamily="@font/monadi"
                android:text="@string/msg_response"
                android:textColor="#00058B"
                android:lineSpacingExtra="10dp"
                android:textSize="14sp"/>


            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msg_Content"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/monadi"
                android:text="@string/company_phone"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/phone_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/msg_Content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/phone"
                android:fontFamily="@font/monadi"
                android:text="01061462749"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cost_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:fontFamily="@font/monadi"
                android:text="@string/cost"
                android:textColor="#000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/cost_monthly_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/phone_data"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="20dp"
                android:layout_toStartOf="@+id/cost_monthly"
                android:fontFamily="@font/monadi"
                android:text="50 جنية"
                android:textSize="15sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>