<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarThumbVertical="@null"
    app:ignore="NamespaceTypo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardElevation="4dp"
            card_view:cardCornerRadius="15dp"
            card_view:contentPadding="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_use_fullName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:hint="@string/full_name"
                    android:textDirection="rtl"
                    app:boxBackgroundColor="#FFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monadi"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_user_phone"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:hint="@string/user_phone"
                    android:textDirection="rtl"
                    app:boxBackgroundColor="#FFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monadi"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_user_address"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:hint="@string/address"
                    android:textDirection="rtl"
                    app:boxBackgroundColor="#FFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monadi"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_user_binNumber"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#fff"
                    android:hint="@string/bin_number"
                    android:textDirection="rtl"
                    app:boxBackgroundColor="#FFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/monadi"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/monadi"
                    android:text="المصاريف"
                    android:layout_marginTop="10dp"
                    android:textColor="#000"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/radio_group_cost_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingHorizontal="50dp"
                    android:layout_marginVertical="10dp">

                    <RadioButton
                        android:id="@+id/radio_btn_yearly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_weight="1"
                        android:text="سنوي"
                        android:fontFamily="@font/monadi"/>

                    <RadioButton
                        android:id="@+id/radio_btn_monthly"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"

                        android:fontFamily="@font/monadi"
                        android:text="شهري" />

                </RadioGroup>

                <Button
                    android:id="@+id/button_send"
                    style="@style/ButtonSend" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>
</ScrollView>